FullSb1-27-apr-15/src/objects/NetDensity__c.object
<CustomObject>
    <fields>
        <fullName>AP_Opportunity_Owner__c</fullName>
        <label>AP Opportunity Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Larry Louie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olaf Groth / Marjan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marjan Mohsenin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghazal Hashemi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Russell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarissa Taveras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walid Malouf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marty Manley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alethea Sibois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luis Escamilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Drummond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Cohen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tanja Levine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IXL/Peter Russell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IXL/Henrik Totterman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silvia Estivill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alethea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ursula Lozada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huseyn Charif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henrik Jonsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soren Riber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kabir Joshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jean De Villeneuve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christophe/Jean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AP_Stages__c</fullName>
        <label>AP Stages</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NetDensity</relationshipLabel>
        <relationshipName>NetDensity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sao Paolo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collaboration_Recognised_Date__c</fullName>
        <label>Collaboration Recognised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collaboration_Recognised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collaboration Recognised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CR_Opportunities_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Owner__c</fullName>
        <label>Department Owner</label>
        <picklist>
            <picklistValues>
                <fullName>IXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funnel_Activity__c</fullName>
        <label>Funnel Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1 - Attend a Hult event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1 - Downloaded resume book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1 - Phone conversation/pitch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1 - Subscribe to CR newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - B2B in-house info-session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - B2B Staff e-blast/intranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Career fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Company presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Company visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Face to face meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Graduation prize sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Host event on campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Hult Prize judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Joint/co-branded event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Meet w/ ED or Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Mentors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - On campus speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Posting Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Student Sourced Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Teaching at Hult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - AP – Lead Source IXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - AP projects (Fee Waived)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Corporate Electives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Internships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Interviewing Students</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Student/Alumni Hired (Self-Sourced)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Student Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 4 - AP Projects (Fee)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 4 - B2B signed partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 4 - Exec. Education</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Handed_over_to_IXL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handed over to IXL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Introduced_to_IXL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Introduced to IXL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Client_Interaction_Comment__c</fullName>
        <label>Last Client Interaction Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Client_Interaction__c</fullName>
        <label>Last Client Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_introduced_by_different_from_owner__c</fullName>
        <formula>if( AND( Opportunity_lead_introduced_by__r.Id &lt;&gt; OwnerId , Opportunity_lead_introduced_by__c &lt;&gt;&quot;&quot;) , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead introduced by different from owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner__c</fullName>
        <label>Legacy Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_or_Repeat_Client__c</fullName>
        <label>New or Repeat Client</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat - Closed Not Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New - Closed Not Won</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <label>Opportunity Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>AP 2014 Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Opportunities except AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Search Projects</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_lead_introduced_by__c</fullName>
        <label>Opportunity lead introduced by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Opportunities_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Fee__c</fullName>
        <label>Target Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Opportunity__c</fullName>
        <label>Type of Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>OCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Sessions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job postings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship postings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec Track Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club or Classroom Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women&apos;s Speaker Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Speaker Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HGCC Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mock interviewing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NetDensity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NetDensity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetDensities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>